welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:15: error: expected class or object definition
def isFacingTrail():Boolean = {
^SlugHunting:28: error: Unmatched closing brace '}' ignored here
}
^